--- a/v3/viewer.html
+++ b/v3/viewer.html
@@ -32,6 +32,10 @@
                 <label for="wrapper-template">3. Wrapper template (use <code>{{content}}</code> as placeholder):</label>
                 <textarea id="wrapper-template" rows="4"></textarea>
             </div>
+            <div class="setting-item">
+                <label for="filename-suffix">4. Optional Filename Suffix:</label>
+                <input type="text" id="filename-suffix" placeholder="e.g., MyExperiment_v1">
+            </div>
             <button id="generate-button">Generate Prompts</button>
         </div>
 
